force-app/main/default/objects/Opportunity/fields/ATAK_Project_Needed__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATAK Project Needed</label>
    <type>Checkbox</type>
</CustomField>