force-app/main/default/objects/Opportunity/fields/ATAK_Project_Request_Priority__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project_Request_Priority__c</fullName>
    <label>ATAK Project Request Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority</valueSetName>
    </valueSet>
</CustomField>