force-app/main/default/objects/Opportunity/fields/ATAK_Project_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project_Request_Status__c</fullName>
    <label>ATAK Project Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Request_Status</valueSetName>
    </valueSet>
</CustomField>