force-app/main/default/objects/Opportunity/fields/ATAK_Project_Suggested_Name__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project_Suggested_Name__c</fullName>
    <formula>Type_Code__c  &amp; &apos;_&apos; &amp; TEXT(Service_Package__c) &amp; &apos;_&apos; &amp; Account.Parent.Name &amp; &apos;_&apos; &amp; Account.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATAK Project Suggested  Name</label>
    <type>Text</type>
</CustomField>