force-app/main/default/objects/Opportunity/fields/ATAK_Projectx__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Projectx__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATAK Project</label>
    <referenceTo>ATAK_Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>