force-app/main/default/objects/Opportunity/fields/Attention_Points__c.field-meta.xml
<CustomField>
    <fullName>Attention_Points__c</fullName>
    <label>Attention Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>