force-app/main/default/objects/Opportunity/fields/Authorization_s__c.field-meta.xml
<CustomField>
    <fullName>Authorization_s__c</fullName>
    <label>Authorization(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_2</valueSetName>
    </valueSet>
</CustomField>