force-app/main/default/objects/Opportunity/fields/Award_criteria_Social_employment__c.field-meta.xml
<CustomField>
    <fullName>Award_criteria_Social_employment__c</fullName>
    <label>Award criteria-Social employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Choice</valueSetName>
    </valueSet>
</CustomField>