force-app/main/default/objects/Opportunity/fields/Award_criteriaOther__c.field-meta.xml
<CustomField>
    <fullName>Award_criteriaOther__c</fullName>
    <label>Award criteria-Other</label>
    <type>TextArea</type>
</CustomField>