force-app/main/default/objects/Opportunity/fields/Award_criteriaPrice_details__c.field-meta.xml
<CustomField>
    <fullName>Award_criteriaPrice_details__c</fullName>
    <inlineHelpText>Please indicate the weight in the decision or any other relevant information</inlineHelpText>
    <label>Award criteria-Price details</label>
    <type>TextArea</type>
</CustomField>