force-app/main/default/objects/Opportunity/fields/Bank_statement__c.field-meta.xml
<CustomField>
    <fullName>Bank_statement__c</fullName>
    <label>Bank Statement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>