force-app/main/default/objects/Opportunity/fields/Bill_of_materials__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_materials__c</fullName>
    <label>Bill of Materials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>