force-app/main/default/objects/Opportunity/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>