force-app/main/default/objects/Opportunity/fields/Contact_form__c.field-meta.xml
<CustomField>
    <fullName>Contact_form__c</fullName>
    <label>Contact form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_2</valueSetName>
    </valueSet>
</CustomField>