force-app/main/default/objects/Opportunity/fields/Contract_Duration_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration_Type__c</fullName>
    <label>Contract Duration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
            <value>
                <fullName>One Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>