force-app/main/default/objects/Opportunity/fields/Contractor_Certification__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Certification__c</fullName>
    <label>Contractor Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>