force-app/main/default/objects/Opportunity/fields/Criminal_record_KHV__c.field-meta.xml
<CustomField>
    <fullName>Criminal_record_KHV__c</fullName>
    <label>Criminal record KHV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>