force-app/main/default/objects/Opportunity/fields/Dossier_Requirements_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dossier_Requirements_Notes__c</fullName>
    <label>Dossier Requirements Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>