force-app/main/default/objects/Opportunity/fields/Expected_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Contract_Start_Date__c</fullName>
    <label>Expected Contract Start Date</label>
    <type>Date</type>
</CustomField>