force-app/main/default/objects/Opportunity/fields/Extra_Work_Description__c.field-meta.xml
<CustomField>
    <fullName>Extra_Work_Description__c</fullName>
    <label>Extra Work Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>