force-app/main/default/objects/Opportunity/fields/General_Liability_Insurance_BA__c.field-meta.xml
<CustomField>
    <fullName>General_Liability_Insurance_BA__c</fullName>
    <label>General Liability Insurance (BA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>