force-app/main/default/objects/Opportunity/fields/Go_No_Go__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Go / No Go</label>
    <type>Checkbox</type>
</CustomField>