force-app/main/default/objects/Opportunity/fields/Go_No_Go_Description__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Description__c</fullName>
    <label>Go/No Go Description</label>
    <type>TextArea</type>
</CustomField>