force-app/main/default/objects/Opportunity/fields/Guarantee_modalities__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_modalities__c</fullName>
    <label>Guarantee Modalities</label>
    <type>TextArea</type>
</CustomField>