force-app/main/default/objects/Opportunity/fields/Guarantee_required__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_required__c</fullName>
    <label>Guarantee Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Choice</valueSetName>
    </valueSet>
</CustomField>