force-app/main/default/objects/Opportunity/fields/Indexation__c.field-meta.xml
<CustomField>
    <fullName>Indexation__c</fullName>
    <label>Indexation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_2</valueSetName>
    </valueSet>
</CustomField>