force-app/main/default/objects/Opportunity/fields/Initiative_Party__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Party__c</fullName>
    <label>Initiative Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KGC</fullName>
            </value>
            <value>
                <fullName>Lead/Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>