force-app/main/default/objects/Opportunity/fields/Internal_validation_date__c.field-meta.xml
<CustomField>
    <fullName>Internal_validation_date__c</fullName>
    <label>Internal Validation Date</label>
    <type>Date</type>
</CustomField>