force-app/main/default/objects/Opportunity/fields/Location_visit_date__c.field-meta.xml
<CustomField>
    <fullName>Location_visit_date__c</fullName>
    <label>Location Visit Date</label>
    <type>Date</type>
</CustomField>