force-app/main/default/objects/Opportunity/fields/Notarial_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Notarial_Certificate__c</fullName>
    <label>Notarial Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>