force-app/main/default/objects/Opportunity/fields/Number_Contract_Years_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Number_Contract_Years_Fixed__c</fullName>
    <label>Number Contract Years Fixed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>