force-app/main/default/objects/Opportunity/fields/Number_Contract_Years_Optional__c.field-meta.xml
<CustomField>
    <fullName>Number_Contract_Years_Optional__c</fullName>
    <label>Number Contract Years Optional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>