force-app/main/default/objects/Opportunity/fields/Price_Request_BS_Comments__c.field-meta.xml
<CustomField>
    <fullName>Price_Request_BS_Comments__c</fullName>
    <label>Price Request BS Comments</label>
    <type>TextArea</type>
</CustomField>