force-app/main/default/objects/Opportunity/fields/Price_Request_Priority__c.field-meta.xml
<CustomField>
    <fullName>Price_Request_Priority__c</fullName>
    <label>Price Request Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority</valueSetName>
    </valueSet>
</CustomField>