force-app/main/default/objects/Opportunity/fields/Price_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Price_Request_Status__c</fullName>
    <label>Price Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Request_Status</valueSetName>
    </valueSet>
</CustomField>