force-app/main/default/objects/Opportunity/fields/Pricing_Request_Needed__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Request Needed</label>
    <type>Checkbox</type>
</CustomField>