force-app/main/default/objects/Opportunity/fields/Project_Plan__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan__c</fullName>
    <label>Project Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_2</valueSetName>
    </valueSet>
</CustomField>