force-app/main/default/objects/Opportunity/fields/Q_A__c.field-meta.xml
<CustomField>
    <fullName>Q_A__c</fullName>
    <label>Q&amp;A</label>
    <type>Date</type>
</CustomField>