force-app/main/default/objects/Opportunity/fields/Quick_Quote__c.field-meta.xml
<CustomField>
    <fullName>Quick_Quote__c</fullName>
    <formula>RecordType.DeveloperName=&apos;Quick_Quote&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quick Quote</label>
    <type>Checkbox</type>
</CustomField>