force-app/main/default/objects/Opportunity/fields/Quotation_Form__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Form__c</fullName>
    <label>Quotation Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_2</valueSetName>
    </valueSet>
</CustomField>