force-app/main/default/objects/Opportunity/fields/Reference_list__c.field-meta.xml
<CustomField>
    <fullName>Reference_list__c</fullName>
    <label>Reference List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>