force-app/main/default/objects/Opportunity/fields/Risk_Analysis_Safety_Plan__c.field-meta.xml
<CustomField>
    <fullName>Risk_Analysis_Safety_Plan__c</fullName>
    <label>Risk Analysis/Safety Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_2</valueSetName>
    </valueSet>
</CustomField>