force-app/main/default/objects/Opportunity/fields/Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Service_Package__c</fullName>
    <label>Service Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_package_type</valueSetName>
    </valueSet>
</CustomField>