force-app/main/default/objects/Opportunity/fields/Site_Visit_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Certificate__c</fullName>
    <label>Site Visit Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_2</valueSetName>
    </valueSet>
</CustomField>