force-app/main/default/objects/Opportunity/fields/Social_security_certificate_RSZ__c.field-meta.xml
<CustomField>
    <fullName>Social_security_certificate_RSZ__c</fullName>
    <label>Social security certificate (RSZ)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>