force-app/main/default/objects/Opportunity/fields/Special_format_requirement_Tender__c.field-meta.xml
<CustomField>
    <fullName>Special_format_requirement_Tender__c</fullName>
    <label>Special (format) requirement Tender</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>