force-app/main/default/objects/Opportunity/fields/Specification_Number__c.field-meta.xml
<CustomField>
    <fullName>Specification_Number__c</fullName>
    <label>Specification Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>