force-app/main/default/objects/Opportunity/fields/Specification_number_Client_reference__c.field-meta.xml
<CustomField>
    <fullName>Specification_number_Client_reference__c</fullName>
    <label>Specification number/ Client reference</label>
    <type>TextArea</type>
</CustomField>