force-app/main/default/objects/Opportunity/fields/Statement_of_Proper_Execution__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Proper_Execution__c</fullName>
    <label>Statement of Proper Execution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>