force-app/main/default/objects/Opportunity/fields/Statement_of_Truth__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Truth__c</fullName>
    <label>Statement of Truth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_2</valueSetName>
    </valueSet>
</CustomField>