force-app/main/default/objects/Opportunity/fields/Submission_date__c.field-meta.xml
<CustomField>
    <fullName>Submission_date__c</fullName>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>