force-app/main/default/objects/Opportunity/fields/Submission_Date_date_only__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date_date_only__c</fullName>
    <formula>DATEVALUE( Submission_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Date (date only)</label>
    <type>Date</type>
</CustomField>