force-app/main/default/objects/Opportunity/fields/Submission_Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date_Due__c</fullName>
    <label>Submission Date Due</label>
    <type>Date</type>
</CustomField>