force-app/main/default/objects/Opportunity/fields/Submit_Via__c.field-meta.xml
<CustomField>
    <fullName>Submit_Via__c</fullName>
    <label>Submit Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bosa</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>IT Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>