force-app/main/default/objects/Opportunity/fields/Sustainability_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Declaration__c</fullName>
    <label>Sustainability Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_2</valueSetName>
    </valueSet>
</CustomField>