force-app/main/default/objects/Opportunity/fields/Tax_certificate__c.field-meta.xml
<CustomField>
    <fullName>Tax_certificate__c</fullName>
    <label>Tax certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>