force-app/main/default/objects/Opportunity/fields/Tender_Documents_Requirements_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tender_Documents_Requirements_Notes__c</fullName>
    <label>Tender Documents Requirements Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>