force-app/main/default/objects/Opportunity/fields/Turnover_Statement__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Statement__c</fullName>
    <label>Turnover Statement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>