force-app/main/default/objects/Opportunity/fields/Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Code__c</fullName>
    <formula>CASE(
    Type,
    &quot;Smartscape&quot;, &quot;SMART&quot;,
    &quot;Subscription&quot;, &quot;ABO&quot;,
    &quot;Progress Statement&quot;, &quot;VS&quot;,
    &quot;Extra Work&quot;, &quot;MW&quot;,
    &quot;Small Work&quot;, &quot;KW&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Code</label>
    <type>Text</type>
</CustomField>