force-app/main/default/objects/Opportunity/fields/UEA__c.field-meta.xml
<CustomField>
    <fullName>UEA__c</fullName>
    <label>UEA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>