force-app/main/default/objects/Opportunity/fields/Work_Size__c.field-meta.xml
<CustomField>
    <fullName>Work_Size__c</fullName>
    <label>Work Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Extra Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>