force-app/main/default/objects/Opportunity/fields/Workers_Compensat_Insurance_AO__c.field-meta.xml
<CustomField>
    <fullName>Workers_Compensat_Insurance_AO__c</fullName>
    <label>Workers&apos; Compensat Insurance (AO)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Infosheet_Statuses_1</valueSetName>
    </valueSet>
</CustomField>