force-app/main/default/objects/Opportunity/recordTypes/One_Shot.recordType-meta.xml
<RecordType>
    <fullName>One_Shot</fullName>
    <active>true</active>
    <businessProcess>One Shot</businessProcess>
    <label>One Shot</label>
</RecordType>