force-app/main/default/objects/Opportunity/recordTypes/Public_Tender.recordType-meta.xml
<RecordType>
    <fullName>Public_Tender</fullName>
    <active>true</active>
    <businessProcess>Public Tender</businessProcess>
    <label>Public Tender</label>
</RecordType>