force-app/main/default/objects/Opportunity/recordTypes/Tender.recordType-meta.xml
<RecordType>
    <fullName>Tender</fullName>
    <active>true</active>
    <businessProcess>Tender</businessProcess>
    <label>Tender</label>
</RecordType>