force-app/main/default/objects/Opportunity/validationRules/Loss_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Loss_Reason__c, &quot;&quot;),
    ISPICKVAL(StageName, &quot;Closed Lost&quot;)
)</errorConditionFormula>
    <errorMessage>You have to provide a loss reason if the Opportunity is Closed Lost.</errorMessage>
</ValidationRule>